flex containers set up

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="sec2">
 
         <div class="sec2-title">
-
+            MY FOUR SQUARES
         </div>
 
         <div class="sec2-squares">
@@ -112,7 +112,7 @@
             </div>
 
             <div class="sec4-sign-up-button">
-
+                Sign up
             </div>
 
         </div>
