last iteration b4 restart

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
             <div class="sec3-content">
 
-                blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellat, tempora! Quo cum quae temporibus sequi tempora ratione enim, quasi officiis numquam praesentium molestias blanditiis soluta obcaecati ducimus adipisci ex suscipit?
 
             </div>
 
